# mingw-w64-cppwinrt

./: .editorconfig  .gitattribute  .gitignore  CMakeLists.txt  LICENSE  README.md  local-build.sh
.github/workflows/: build.yml
docs/: how-its-done-in-visual-studio.md  using-upstream-cppwinrt.md
examples/: README.md
examples/hello-json/: .gitignore  Makefile.am  configure.ac  main.cpp
examples/smtc-demo/: CMakeLists.txt  build-and-run.sh  build-cross.sh  build_and_run.cmd  main.cpp  systemmediatransportcontrolsinterop.h
packaging/: .gitignore  CMakeLists.txt  CppWinRT.pc.in  CppWinRTConfig.cmake.in  generate-package.sh  import-upstream.sh
packaging/cppwinrt/: CMakeLists.txt
packaging/metadata/: README.md
packaging/patches/: 0001-Use-vendored-copy-of-winmd.patch
